Add files via upload
I downloaded the JDK to the version requested in the assignment (1.8).
And I made adjustments to functions that did not compile in this version.